# pypkg-template

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: README.md  main.mojo
src/mypackage/: __init__.mojo
src/mypackage/mymodule/: __init__.mojo
src/mypackage/mymodule2/: test.mojo
src/python_package/: __init__.mojo  hello_world.mojo  mymodule.mojo
