[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = "A Python Package Template"
authors = ["Your Name <youremail@example.com>"]
packages = [
    { include = "mypackage", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
open-interpreter = "^0.1.10"
commitizen = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

